tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__BEEEPBEEEPBEEEP-AAAAAAAAAAAAAAAAAAAHfQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1917,
  "prerequisites": [
    1916
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Knowing that your cleanroom needs maintenance is pretty important. Instead of just turning on a light, why not use a howler alarm? It'll notify you up to 128 blocks away.\n\n[warn]Warning: May cause uncontrollable urine leakage when activated.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lBEEEP BEEEP BEEEP",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1916
  ],
  "rewards": [],
  "tasks": []
}
