tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__BioDieselFuel-AAAAAAAAAAAAAAAAAAADTQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 845,
  "optional_prerequisites": [
    848,
    849,
    1544,
    843,
    844
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "With ethanol or methanol and seed oil or fish oil you can make bio diesel. Its burn value is 320,000 EU per cell, less than regular diesel, but more renewable. Diesel or bio diesel are needed for cetane-boosted diesel.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lBio Diesel Fuel",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
