tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__BioOrganicMesh-AAAAAAAAAAAAAAAAAAADBg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 774,
  "prerequisites": [
    771,
    731
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you want to save the environment you can autoclave 16 plantballs to get raw bio fiber with the following liquids:\n\nBiomass        33% chance\nMethanol       50% chance\nFuel            90% chance\nNitro-diesel 100% chance\n\n§rHowever, making carbon plates this way will require an electric blast furnace.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lBio Organic Mesh",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    771,
    731
  ],
  "rewards": [],
  "tasks": []
}
