tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__BrewingLiquids-AAAAAAAAAAAAAAAAAAAAjg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 142,
  "prerequisites": [
    132
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This machine is not only capable of brewing more powerful burnable liquids, it can also be used to brew nutrient distillation, which might have further usage soon™.\n\nNote that you get different ratios depending on what item you use for recipes that allow alternates. Use what you like.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lBrewing Liquids",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    132
  ],
  "rewards": [],
  "tasks": []
}
