tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__CagingaDemonWith-AAAAAAAAAAAAAAAAAAAF9w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1527,
  "prerequisites": [
    138
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Ever wanted to trap a wither but the only option was non movable bedrock? Now that you've made dark steel you can get reinforced obsidian which is wither-proof. Useful for manual killing and even automation once you get a powered spawner supplying you with wither skeleton skulls.\n\n[note]Hint: Unlike vanilla obsidian, reinforced obsidian CAN be moved by pistons which might come in handy.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lCaging a Demon - Wither Killing Chamber",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    138
  ],
  "rewards": [],
  "tasks": []
}
